--- a/scss/components/siteDown.scss
+++ b/scss/components/siteDown.scss
@@ -1,23 +1,28 @@
 .siteDown{
 	background:url('../img/siteDown_lg.jpg') no-repeat center center fixed;
 	background-size:cover;
-	.logo{
-		background:url('../img/logo_large.png') no-repeat center center fixed;
-		background-size:contain;
-		position:absolute;bottom:30px;
-		width:150px;height:60px;
+	section{
+		@include center-block;
+		width:600px;text-align:center;
 	}
+	.headline{
+		background-color:rgba(68, 68, 68, 0.5);
+		margin-top:40px;padding:32px;
+		color:$white;
+		img{margin-bottom:20px;height:60px;}
+	}
+	.logo{position:absolute;bottom:30px;width:600px;}
 }
 
 @media screen and (max-width: 480px) {
 	.siteDown{
 		background:url('../img/siteDown_sm.jpg') no-repeat center center fixed;
 		background-size:cover;
-		.logo{
-			background:url('../img/logo_large.png') no-repeat center center fixed;
-			background-size:contain;
-			position:absolute;bottom:30px;
-			width:150px;height:60px;
+		section{width:80%;}
+		.headline{
+			margin-top:20px;padding:26px;
+			img{height:40px;}
 		}
+		.logo{width:80%;}
 	}
 }
